--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,5 +1,10 @@
 .root {
   position: relative;
+
+  @media (max-width: 645px) {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 .icon {
   width: 22px;
@@ -10,10 +15,11 @@
   top: 12px;
 }
 .input {
+  box-sizing: border-box;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 12px 20px;
   padding-left: 42px;
-  width: 400px;
+  max-width: 400px;
   border-radius: 10px;
   font-size: 16px;
   &:hover {
