--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,6 +24,10 @@ body {
 .content {
   padding: 40px 0;
 
+  @media (max-width: 820px) {
+    padding: 20px 0;
+  }
+
   &__error-info {
     margin: 100px auto;
     width: 500px;
@@ -112,7 +116,7 @@ body {
 
   &--cart {
     max-width: 820px;
-    margin: 90px auto;
+    margin: 20px auto;
     .content__title {
       margin: 0;
     }
@@ -124,6 +128,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 500px) {
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 
   .content__title {
@@ -186,11 +195,19 @@ body {
     padding-top: 30px;
     margin-top: 30px;
 
+    @media (max-width: 970px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
     &-img {
       display: flex;
       align-items: center;
       margin-right: 15px;
       width: 10%;
+      justify-content: center;
 
       img {
         width: 80px;
@@ -203,6 +220,10 @@ body {
       flex-direction: column;
       justify-content: center;
       width: 40%;
+
+      @media (max-width: 970px) {
+        width: auto;
+      }
 
       h3 {
         font-weight: bold;
@@ -220,8 +241,9 @@ body {
     &-count {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       width: 13%;
+      gap: 10px;
 
       &-minus {
         svg {
@@ -310,6 +332,12 @@ body {
       display: flex;
       justify-content: space-between;
 
+      @media (max-width: 560px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+
       span {
         font-size: 22px;
 
@@ -325,6 +353,12 @@ body {
       display: flex;
       justify-content: space-between;
       margin-top: 40px;
+
+      @media (max-width: 560px) {
+        flex-direction: column-reverse;
+        align-items: center;
+        gap: 10px;
+      }
 
       .go-back-btn {
         display: flex;
@@ -369,13 +403,15 @@ body {
 
   &--empty {
     margin: 80px auto;
-    width: 620px;
+    width: fit-content;
     text-align: center;
+    box-sizing: border-box;
 
     h2 {
       font-size: 36px;
       font-weight: 700;
       margin-bottom: 15px;
+      line-height: 45px;
     }
 
     p {
@@ -383,6 +419,7 @@ body {
       line-height: 145.4%;
       letter-spacing: 0.01em;
       color: #777777;
+      word-wrap: break-word;
     }
 
     icon {
@@ -394,6 +431,9 @@ body {
       display: block;
       width: 300px;
       margin: 45px auto 60px;
+      @media (max-width: 360px) {
+        width: 80vw;
+      }
     }
 
     .button--black {
